--- a/.env.backup
+++ b/.env.backup
@@ -2,7 +2,12 @@ PRIV_KEY_WALLET=""
 HELIUS_HTTPS_URI="https://mainnet.helius-rpc.com/?api-key="
 HELIUS_WSS_URI="wss://mainnet.helius-rpc.com/?api-key="
 HELIUS_HTTPS_URI_TX="https://api.helius.xyz/v0/transactions/?api-key="
-JUP_HTTPS_QUOTE_URI="https://quote-api.jup.ag/v6/quote"
-JUP_HTTPS_SWAP_URI="https://quote-api.jup.ag/v6/swap"
+JUP_HTTPS_QUOTE_URI="https://api.jup.ag/swap/v1/quote"
+JUP_HTTPS_SWAP_URI="https://api.jup.ag/swap/v1/swap"
 JUP_HTTPS_PRICE_URI="https://api.jup.ag/price/v2"
 DEX_HTTPS_LATEST_TOKENS="https://api.dexscreener.com/latest/dex/tokens/"
+
+# Legacy JUP apis - Not needed to run this tool. Just for reference
+OLD_JUP_HTTPS_QUOTE_URI="https://quote-api.jup.ag/v6/quote"
+OLD_JUP_HTTPS_SWAP_URI="https://quote-api.jup.ag/v6/swap"
+OLD_JUP_HTTPS_PRICE_URI="https://api.jup.ag/price/v2"
