--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.1",
+    "@types/node-telegram-bot-api": "^0.64.8",
     "@types/ws": "^8.5.13",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
@@ -33,6 +34,7 @@
     "bs58": "^6.0.0",
     "dotenv": "^16.4.5",
     "luxon": "^3.5.0",
+    "node-telegram-bot-api": "^0.66.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.0"
