--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bs58": "^6.0.0",
     "dotenv": "^16.4.5",
     "luxon": "^3.5.0",
+    "moment-timezone": "^0.5.48",
+    "node-cron": "^4.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
